--- a/main/build.gradle
+++ b/main/build.gradle
@@ -322,6 +322,9 @@ dependencies {
     // somehow there is a transitive play service dependency which we don't want
     configurations.all*.exclude module: "play-services-measurement"
 
+    // Support Library Design
+    implementation 'com.google.android.material:material:1.2.1'
+
     // ProcessPhoenix, reliable process restart
     implementation 'com.jakewharton:process-phoenix:2.0.0'
 
@@ -351,9 +354,6 @@ dependencies {
     // Testing Support Libraries
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
-    // Undo toast
-    implementation 'com.github.jenzz.undobar:library:1.3:api15Release@aar'
 
     // Drag n drop for listview
     implementation 'asia.ivity.android:drag-sort-listview:1.0'
