--- a/main/build.gradle
+++ b/main/build.gradle
@@ -275,11 +275,11 @@ dependencies {
     }
 
     // GeographicLib
-    implementation "net.sf.geographiclib:GeographicLib-Java:1.49"
+    implementation 'net.sf.geographiclib:GeographicLib-Java:1.50'
 
     // Jackson XML processing
-    def jacksonVersion = '2.9.9'
-    def jacksonVersionPatch = '2.9.9.3'
+    def jacksonVersion = '2.9.10'
+    def jacksonVersionPatch = '2.9.10.1'
     implementation "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
     implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersionPatch"
     implementation "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
@@ -324,7 +324,7 @@ dependencies {
     implementation 'com.drewnoakes:metadata-extractor:2.12.0'
 
     // Okhttp network access. 3.12.x is API level < 21, 3.13 or better requires API 21
-    implementation 'com.squareup.okhttp3:okhttp:3.12.5'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.6'
 
     // Play Services
     implementation 'com.google.android.gms:play-services-location:16.0.0'
@@ -336,7 +336,7 @@ dependencies {
     implementation 'com.jakewharton:process-phoenix:2.0.0'
 
     // RxJava
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.14'
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
 
     // Support Libraries. All com.android.support.* libraries must use the same version
@@ -361,7 +361,7 @@ dependencies {
 
     // Testing Support Libraries
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:3.0.2"
 
     // Undo toast
     implementation 'com.github.jenzz.undobar:library:1.3:api8Release@aar'
