update crowdin process
- clarify the README
- optimize/fix download script
  - fix bug for the "pr" parameter check
  - add check for new languages
- add gitignore entry for cgeo-calendar strings

--- a/.gitignore
+++ b/.gitignore
@@ -47,4 +47,7 @@ main/gradle.properties
 # ignore AS layout captures
 captures/
 
+# ignor calendar res folder (for crowdin sync)
+/cgeo-calendar/res
+
 main/usage.txt
