--- a/main/build.gradle
+++ b/main/build.gradle
@@ -54,13 +54,13 @@ android {
 
         javaCompileOptions {
             // workaround for build error "Could not find AndroidManifest.xml file using generation folder" when using Gradle plugin v3.5
-            // might be fixed with release of AndroidAnnotations 4.7 (see https://github.com/androidannotations/androidannotations/issues/2034)
+            // will be fixed with release of AndroidAnnotations 4.7.0 (see https://github.com/androidannotations/androidannotations/issues/2229)
             annotationProcessorOptions {
                 arguments = [
                         "androidManifestFile": "$projectDir/AndroidManifest.xml".toString()
                 ]
-            } // annotationProcessorOptions
-        } // javaCompileOptions
+            }
+        }
     }
 
     // signing is handled via private.properties
@@ -257,6 +257,7 @@ android {
 
 dependencies {
     // AndroidAnnotations, https://github.com/excilys/androidannotations/wiki/building-project-gradle
+    // remove the android.defaultConfig.javaCompileOptions.annotationProcessorOptions on version 4.7.0
     def androidAnnotationsVersion = '4.6.0'
     annotationProcessor "org.androidannotations:androidannotations:$androidAnnotationsVersion"
     implementation "org.androidannotations:androidannotations-api:$androidAnnotationsVersion"
