--- a/main/build.gradle
+++ b/main/build.gradle
@@ -353,26 +353,27 @@ dependencies {
     // Support Libraries. All com.android.support.* libraries must use the same version
 
     // Support Library AppCompat
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
 
     // Support Library ExifInterface
-    implementation 'androidx.exifinterface:exifinterface:1.0.0'
+    implementation 'androidx.exifinterface:exifinterface:1.1.0'
 
     // Support Library GridLayout used by the coordinate calculator
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
 
     // Support Library RecyclerView
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     // we don't want to implement decorators on our own
     implementation 'com.yqritc:recyclerview-flexibledivider:1.4.0'
 
     // Support Annotations. use same version for the main app and the test app
-    implementation 'androidx.annotation:annotation:1.0.0'
-    androidTestImplementation 'androidx.annotation:annotation:1.0.0'
+    def annotationVersion = '1.1.0'
+    implementation "androidx.annotation:annotation:$annotationVersion"
+    androidTestImplementation "androidx.annotation:annotation:$annotationVersion"
 
     // Testing Support Libraries
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     // Undo toast
     implementation 'com.github.jenzz.undobar:library:1.3:api8Release@aar'
