replace FindBugs by SpotBugs
FindBugs is deprecated, SpotBugs the official successor.
see https://spotbugs.github.io/

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ plugins {
 
     // Build scan plugin, see https://plugins.gradle.org/plugin/com.gradle.build-scan
     id 'com.gradle.build-scan' version '3.0'
+
+    // use SpotBugs instead of FindBugs, see https://plugins.gradle.org/plugin/com.github.spotbugs
+    id 'com.github.spotbugs' version '3.0.0'
 }
 
 /*
@@ -98,10 +101,6 @@ allprojects {
                         // https://github.com/joel-costigliola/assertj-core/issues/345
                         if (selection.candidate.group == 'org.assertj' && selection.candidate.module == 'assertj-core' && selection.candidate.version.substring(0,1).toInteger() > 2) {
                             selection.reject("assertj 3.x or higher requires Java 7 SE classes not available in Android")
-                        }
-                        // findbugs team has some release trouble
-                        if (selection.candidate.group == 'com.google.code.findbugs' && selection.candidate.module == 'annotations' && selection.candidate.version == '3.0.1') {
-                            selection.reject("3.0.1 is not an upgrade of 3.0.1u2")
                         }
                         // Apache Commons IO 2.6 fails in FileUtils.deleteDirectory()
                         if (selection.candidate.group == 'commons-io' && selection.candidate.module == 'commons-io' && selection.candidate.version.substring(0,1).toInteger()*10+selection.candidate.version.substring(2,3).toInteger() > 25) {
