set "noinspection OldTargetApi" for dependencies also here

--- a/cgeo-contacts/build.gradle
+++ b/cgeo-contacts/build.gradle
@@ -19,6 +19,7 @@ android {
 
     defaultConfig {
         minSdkVersion 16
+        //noinspection OldTargetApi
         targetSdkVersion 28
     }
 
