--- a/main/build.gradle
+++ b/main/build.gradle
@@ -280,9 +280,10 @@ dependencies {
     implementation 'net.sf.geographiclib:GeographicLib-Java:1.50'
 
     // Jackson XML processing
-    def jacksonVersion = '2.10.2'
+    def jacksonVersion = '2.9.10'
+    def jacksonVersionPatch = '2.9.10.3'
     implementation "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
-    implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
+    implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersionPatch"
     implementation "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
 
     // Jsoup HTML parsing
