Update for AS 3.6.1
fixes #8141

- update gradle plugin to 3.6.1
- Update gradle to 6.2.2
- build-scan plugin is now enterprise plugin (in settings.gradle)
- access to unreachable sources for undobar brings now a compile error,
  therefore reconfigured to the jar within the cgeo repo
- button_backgrould_kitkat.xml is implemented in undobar,
  therefore now copied to cgeo
- define buildCache cleanup time to 30 days

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,10 @@
+/*
+ * Enterprise plugin replaces Build scan plugin from gradle 6, see https://docs.gradle.com/enterprise/gradle-plugin/
+ */
+plugins {
+    id 'com.gradle.enterprise' version '3.1.1'
+}
+
 // Make the root project name independent of the directory name where we checked out the repository.
 // This can avoid problems with directory names like "cgeo pull request" containing blanks on CI.
 rootProject.name = "cgeo"
@@ -12,6 +19,13 @@ include ':cgeo-contacts'
 buildCache {
     local(DirectoryBuildCache) {
         directory = new File(rootDir, 'build-cache')
-        removeUnusedEntriesAfterDays = 10
+        removeUnusedEntriesAfterDays = 30
+    }
+}
+
+gradleEnterprise {
+    buildScan {
+        termsOfServiceUrl = "https://gradle.com/terms-of-service"
+        termsOfServiceAgree = "yes"
     }
 }
