--- a/main/build.gradle
+++ b/main/build.gradle
@@ -364,7 +364,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     // Undo toast
-    implementation 'com.github.jenzz.undobar:library:1.3:api8Release@aar'
+    // undobar has no public repository
+    implementation files('../undobar/libs/undobar-1.3.jar')
     implementation 'com.nineoldandroids:library:2.4.0'
 
     // ViewPagerIndicator, view pager titles for cache details and similar view pager based activities
