--- a/main/build.gradle
+++ b/main/build.gradle
@@ -364,9 +364,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     // Undo toast
-    // undobar has no public repository
-    implementation files('../undobar/libs/undobar-1.3.jar')
-    implementation 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.github.jenzz.undobar:library:1.3:api15Release@aar'
 
     // ViewPagerIndicator, view pager titles for cache details and similar view pager based activities
     //             url 'https://dl.bintray.com/alexeydanilov/maven'
