--- a/crowdin.yml
+++ b/crowdin.yml
@@ -3,3 +3,7 @@ files:
     translation: /main/res/values-%two_letters_code%/%original_file_name%
     translate_attributes: 0
     content_segmentation: 0
+  - source: /cgeo-contacts/res/values/strings.xml
+    translation: /cgeo-contacts/res/values-%two_letters_code%/%original_file_name%
+    translate_attributes: 0
+    content_segmentation: 0
