--- a/crowdin.yml
+++ b/crowdin.yml
@@ -7,3 +7,6 @@ files:
     translation: /cgeo-contacts/res/values-%two_letters_code%/%original_file_name%
     translate_attributes: 0
     content_segmentation: 0
+  - source: /cgeo-contacts/project/playstore/description/_source/*.txt
+    translation: /cgeo-contacts/project/playstore/description/%language%/%original_file_name%    
+    content_segmentation: 1
