OSM offline map files downloader (fix #8610)

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -845,7 +845,15 @@
             android:name="cgeo.geocaching.connector.gc.PocketQueryListActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/search_pocket_title"
-            android:parentActivityName="cgeo.geocaching.MainActivity"            >
+            android:parentActivityName="cgeo.geocaching.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="cgeo.geocaching.MainActivity" />
+        </activity>
+        <activity
+            android:name="cgeo.geocaching.settings.MapDownloadSelectorActivity"
+            android:label="@string/downloadmap_title"
+            android:parentActivityName="cgeo.geocaching.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="cgeo.geocaching.MainActivity" />
@@ -862,6 +870,13 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_provider_paths" />
         </provider>
+
+        <!-- Receiver for downloaded (map) files -->
+        <receiver android:name=".settings.MapDownloadNotificationReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
