--- a/cgeo-contacts/AndroidManifest.xml
+++ b/cgeo-contacts/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
     <application
         android:allowBackup="false"
-        android:icon="@drawable/cgeo"
+        android:icon="@mipmap/ic_launcher_contacts"
         android:label="@string/app_name" >
         <activity
             android:name=".ContactsActivity"
