--- a/main/build.gradle
+++ b/main/build.gradle
@@ -31,6 +31,7 @@ android {
 
     defaultConfig {
         minSdkVersion 16
+		maxSdkVersion 20
         //noinspection OldTargetApi
         targetSdkVersion 28
         versionName versionNameFromDate()
