--- a/cgeo-contacts/build.gradle
+++ b/cgeo-contacts/build.gradle
@@ -54,11 +54,14 @@ android {
 
 dependencies {
     // Apache Commons
+    implementation 'org.apache.commons:commons-lang3:3.10'
+    // commons-io 2.6 uses java.nio.file.Path - which is first contained in Android API26
+    // could be replaced by Storage Access Framework
+    //noinspection GradleDependency
     implementation 'commons-io:commons-io:2.5'
-    implementation 'org.apache.commons:commons-lang3:3.5'
 
     // Support Library AppCompat
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
 
     // Android annotations
     implementation 'androidx.annotation:annotation:1.1.0'
