--- a/main/build.gradle
+++ b/main/build.gradle
@@ -360,6 +360,8 @@ dependencies {
     // Testing Support Libraries
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestUtil 'androidx.test:orchestrator:1.2.0'
 
     // Undo toast
     implementation 'com.github.jenzz.undobar:library:1.3:api15Release@aar'
