--- a/main/build.gradle
+++ b/main/build.gradle
@@ -356,6 +356,9 @@ dependencies {
     // Undo toast
     implementation 'com.github.jenzz.undobar:library:1.3:api15Release@aar'
 
+    // Drag n drop for listview
+    implementation 'asia.ivity.android:drag-sort-listview:1.0'
+
     // ViewPagerIndicator, view pager titles for cache details and similar view pager based activities
     //             url 'https://dl.bintray.com/alexeydanilov/maven'
     // this is a fork of the original viewpager library
