change ribbon color
related to #8096

- set the ribbon color for nightly to FF00FF
- set the icon color to gray scale for legacy

--- a/main/build.gradle
+++ b/main/build.gradle
@@ -602,6 +602,15 @@ apply plugin: 'com.github.gfx.ribbonizer'
 ribbonizer {
     // use blue ribbon instead of default green
     builder { variant, iconFile ->
-        return customColorRibbonFilter(variant, iconFile, "#0000FF")
+        if (variant.buildType.name == "debug") {
+            return customColorRibbonFilter(variant, iconFile, "#0000FF")
+        } else if (variant.buildType.name == "nightly") {
+            return customColorRibbonFilter(variant, iconFile, "#FF00FF")
+        } else if (variant.buildType.name == "legacy") {
+            return grayScaleFilter(variant, iconFile)
+        }
     }
+
+    //we will force specific variants to be ribbonized
+    forcedVariantsNames "basicNightly", "basicLegacy"
 }
