change ribbon/icon color (#8926)
* change ribbon color

related to #8096

- set the ribbon color for nightly to FF00FF
- set the icon color to gray scale for legacy

* - for legacy: let icon original
- Set ribbons in blue for debug, nightly, rc
- change text for rc to beta

Co-authored-by: bekuno <>

--- a/main/build.gradle
+++ b/main/build.gradle
@@ -602,6 +602,17 @@ apply plugin: 'com.github.gfx.ribbonizer'
 ribbonizer {
     // use blue ribbon instead of default green
     builder { variant, iconFile ->
-        return customColorRibbonFilter(variant, iconFile, "#0000FF")
+        def filter = customColorRibbonFilter(variant, iconFile, "#0000FF")
+        if (variant.buildType.name == "debug") {
+            return filter
+        } else if (variant.buildType.name == "nightly") {
+            return filter
+        } else if (variant.buildType.name == "rc") {
+            filter.label = "beta"
+            return filter
+        }
     }
+
+    // force specific variants to be ribbonized
+    forcedVariantsNames "basicNightly", "basicRc"
 }
