--- a/main/build.gradle
+++ b/main/build.gradle
@@ -365,6 +365,9 @@ dependencies {
     // Drag n drop for listview
     implementation 'asia.ivity.android:drag-sort-listview:1.0'
 
+    // needed for chrome custom tabs
+    implementation 'androidx.browser:browser:1.2.0'
+
     // ViewPagerIndicator, view pager titles for cache details and similar view pager based activities
     //             url 'https://dl.bintray.com/alexeydanilov/maven'
     // this is a fork of the original viewpager library
