--- a/main/build.gradle
+++ b/main/build.gradle
@@ -331,7 +331,10 @@ dependencies {
     implementation "io.reactivex.rxjava3:rxandroid:3.0.0"
 
     // Support Library AppCompat
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    def appcompat_version = "1.2.0"
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    // For loading and tinting drawables on older versions of the platform
+    implementation "androidx.appcompat:appcompat-resources:$appcompat_version"
 
     // Support Library ExifInterface
     implementation 'androidx.exifinterface:exifinterface:1.2.0'
