--- a/main/build.gradle
+++ b/main/build.gradle
@@ -331,10 +331,7 @@ dependencies {
     implementation "io.reactivex.rxjava3:rxandroid:3.0.0"
 
     // Support Library AppCompat
-    def appcompat_version = "1.3.0-alpha02"
-    implementation "androidx.appcompat:appcompat:$appcompat_version"
-    // For loading and tinting drawables on older versions of the platform
-    implementation "androidx.appcompat:appcompat-resources:$appcompat_version"
+    implementation 'androidx.appcompat:appcompat:1.2.0'
 
     // Support Library ExifInterface
     implementation 'androidx.exifinterface:exifinterface:1.2.0'
