WIP libraries updates
Gradle/AS:
 - gradle plugin to 4.1.0
  https://developer.android.com/studio/releases/gradle-plugin#4-1-0
 - gradle to 6.7
   https://docs.gradle.org/6.7/release-notes.html
 - force 'com.android.tools.build:aapt2-proto:4.1.0-6503028'
    because of bug in gradle 4.1.0 (referencing 4.1.0-alpha01-6193524)

Externals:
 - exifinterface to 1.3.1
  https://developer.android.com/jetpack/androidx/releases/exifinterface#1.3.1
 - metadata-extractor to 2.15.0
  https://github.com/drewnoakes/metadata-extractor/releases/tag/2.15.0
 - junit to 4.13.1
  https://github.com/junit-team/junit4/blob/HEAD/doc/ReleaseNotes4.13.1.md
 - spotbugs-annotations to 4.1.4
  https://github.com/spotbugs/spotbugs/blob/4.1.4/CHANGELOG.md

Others:
 - configure buildCache to fix a deprecation
 - Activate gradle build File system watching,
   see https://docs.gradle.org/6.7/userguide/gradle_daemon.html#sec:daemon_watch_fs

Remark:
 - new warning for tests:
   > Task :main:processBasicDebugAndroidTestManifest
   /home/jenkins/slave/workspace/cgeo pull request/tests/AndroidManifest.xml Warning:
     Package name 'cgeo.geocaching.test' used in: AndroidManifest.xml, manifestMerger3419659507102104594.xml.

--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,13 @@ buildscript {
         // these dependencies are used by gradle plugins, not by our projects
 
         // Android gradle plugin
-        classpath 'com.android.tools.build:gradle:4.0.2'
+        classpath 'com.android.tools.build:gradle:4.1.0'
 
         // un-mocking of portable Android classes
         classpath 'de.mobilej.unmock:UnMockPlugin:0.7.6'
 
         // monitor our application method limit
+        //noinspection GradleDependency - see https://github.com/cgeo/cgeo/issues/9208
         classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:1.0.3'
 
         // ribbonizer for easier distinction of non-release builds
@@ -105,6 +106,10 @@ allprojects {
                 }
                 // new versions of checkstyle use guava 27, which has troublesome dependencies: https://groups.google.com/forum/#!topic/guava-announce/Km82fZG68Sw
                 force 'com.google.guava:guava:26.0-jre'
+
+                // force this version because of bug in gradle 4.1.0 (referencing 4.1.0-alpha01-6193524)
+                // TODO check after gradle update
+                force 'com.android.tools.build:aapt2-proto:4.1.0-6503028'
             }
         }
     }
