--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,11 @@ org.gradle.jvmargs = -Xmx2048m
 # Only configure other modules when they are actually needed for the task being executed
 org.gradle.configureondemand=true
 
-# activate build caching
+# Activate build caching
 org.gradle.caching=true
+
+# Activate File system watching, see https://docs.gradle.org/6.7/userguide/gradle_daemon.html#sec:daemon_watch_fs
+org.gradle.vfs.watch=true
 
 # Avoid printing release notes after gradle version upgrades. See https://github.com/gradle/gradle/issues/5213
 org.gradle.internal.launcher.welcomeMessageEnabled=false
