lint changes/fixes
- configure lint for the crowdin process
  - add 'ExtraTranslation' ignore rule in build.gradle for runtime check
  - add 'ExtraTranslation' ignore rule in lint.xml for lint check
  - remove 'MissingQuantity' ignore check
  - remove 'ImpliedQuantity' ignore check
  - edit 'UnusedQuantity' ignore check to all files

- add some unused images (png/xmk) to the ignore list

- add 'ObsoleteLintCustomCheck' ignore rule
  These warnings are only for external sources

- remove 'InvalidPackage' ignore rule for runtime check
  This is fixed in the meantime

- delete some ' UnusedResources' strings
  see https://ci.cgeo.org/job/cgeo%20pull%20request/3872/androidLintResult/type.-2046836529/package.-963969145/

--- a/main/build.gradle
+++ b/main/build.gradle
@@ -150,8 +150,8 @@ android {
         // abort release builds in case of FATAL errors
         checkReleaseBuilds true
 
-        // recommended by ButterKnife, http://jakewharton.github.io/butterknife/
-        disable 'InvalidPackage'
+        // ExtraTranslation - old translation will be deleted by the next crowdin import
+        disable 'ExtraTranslation'
     }
 
     packagingOptions {
