move to gradle 7
The update of AS to 2020.3.1 is possible without update of gradle/AGP.
This PR should merged after the core team updated AS.

Also WhereYouGo works with AS 2020.3.1 with the current gradle/AGP configuration.

With AS 2020.3.1 we can use gradle 7 and AGP 7.
Details:
- update gradle 6.8.3 to 7.2
- update AGP 4.2.1 to 7.0.1
- Follow up:
  - versions plugin needs therefore update 0.38.0 to 0.39.0
  - similar to AGP: aapt2-proto:4.2.1-7147631 to aapt2-proto:7.0.1-7396180
  - addd new lint rule checkDependencies true
  - check - checkstyyle relation must be ordered

prerequisite #11352
supersedes #11500
supersedes #11501

--- a/main/build.gradle
+++ b/main/build.gradle
@@ -190,6 +190,10 @@ android {
 
         // ExtraTranslation - old translation will be deleted by the next crowdin import
         disable 'ExtraTranslation'
+
+        // analyze all dependency modules in parallel and produce a single report
+        // including issues from the app and all of its dependencies
+        checkDependencies true
     }
 
     packagingOptions {
@@ -639,5 +643,5 @@ tasks.register('checkstyle', Checkstyle) {
 }
 
 tasks.named('check') {
-    dependsOn tasks.named('checkstyle')
+    mustRunAfter tasks.named('checkstyle')
 }
